# agentic-order-routing

./: .flake8  .gitignore  CLAUDE.md  CLAUDE_USAGE.md  README.md  api_server.py  diagram.mmd  index.html  intake_agent_tools.py  main.py  mermaid-debug.md  order_processing.py  pyproject.toml  pytest.ini  requirements.txt  routing_tools.py  run.sh  script.js  setup.py  style.css
.github/workflows/: claude.yml
frontend/: dashboard.html
src/: __init__.py  api_server.py  fabric_data.py  main.py
src/agentic_order_routing/: __init__.py  main.py  mock_data.py
src/agentic_order_routing/prompts/: order_intake_agent_instructions.md  order_routing_decision_agent_instructions.md
src/agentic_order_routing/tools/: __init__.py  intake_agent_tools.py  routing_tools.py
src/application_agents/: __init__.py  fabric_intelligence_agents.py  fulfillment_specialist_agents.py  order_processing_agents.py
src/prompts/: fabric_intelligence_root_agent_instructions.md  inventory_agent_instructions.md  order_agent_instructions.md  order_intake_agent_instructions.md  order_routing_decision_agent_instructions.md  preorder_backorder_agent_instructions.md
src/tools/: intake_agent_tools.py  inventory_agent_tools.py  order_agent_tools.py  preorder_backorder_tools.py  routing_tools.py
static/: dashboard.html
tests/: __init__.py  conftest.py  test_agent_tools.py  test_agent_workflow.py  test_api_endpoints.py  test_fabric_intelligence.py  test_mock_data.py
tests/fixtures/: expected_responses.json  sample_orders.json
