[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-order-routing"
version = "0.1.0"
description = "Agentic AI Order Routing POC for Commerce Operating System"
requires-python = ">=3.12"
dependencies = [
    "openai-agents",
    "python-dotenv"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.1",
]
dev = [
    "flake8>=6.1.0",
    "black>=23.0.0",
] 